2009-09-28  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Enhance the `mandel' demo.
	
	* demo/mandel.c: Refactor code to clarify steps. Change the color
	scheme to make the output more printer-friendly.

2009-09-25  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Extend the `mandel' demo with use of the SEP protocol.
	
	* demo/mandel.c: Update to use place management.

2009-09-21  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Add some demos with graphics.

	`checkers' - create a 8x8 checker board.	
	`mandel' - approximate the Mandelbrot set.

	* demo/checkers.c,
	* demo/mandel.c: New.

	* demo/Makefile.am: Update accordingly.

2009-08-28  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Extend the SHA benchmark code.
	
	* benchmarks/sha/sha1.c: Remove block size in call to
	`sha_main_outer'.
	
	* benchmarks/sha/sha1_alt.c: New optimized version, thanks to
	Mike Lankamp.

	* benchmarks/sha/testsha.sh: New.
	
	* benchmarks/sha/Makefile.am: Update accordingly.
	
2009-08-26  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Minor packaging fixes.

	* benchmarks/livermore/genmk.sh: Be more verbose.

2009-08-26  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Make package less dependent on the base tree.
	
	* bootstrap: Make less verbose. Use the new `sl-init-autoconf'.

2009-08-25  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	* ChangeLog: initialize.

See `slc/ChangeLog.1' for earlier changes.
